# Strath-Project

./: CMakeLists.txt  main.cpp  teams_file.csv
