cmake_minimum_required(VERSION 3.29)
project(Strath_Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(Strath_Project
    .idea/.gitignore
    .idea/editor.xml
    .idea/misc.xml
    .idea/modules.xml
    .idea/Strath-Project.iml
    .idea/vcs.xml
    main.cpp
        cmake-build-debug/teams_file.csv)
